--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "scripts": {
     "install-all": "npm install --prefix server && npm install --prefix client",
     "dev": "concurrently \"npm start --prefix server\" \"npm start --prefix client\""
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
